# adConverter

./: .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  ruff.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  main.desktop  tauri.conf.json
src-tauri/assets/docker/: Dockerfile  README.md  requirements.txt  transcript_cli.py
src-tauri/assets/presets/: 10min.json  20min.json  HD-fast.json  USB-h264.json  USB-h265.json  av1-nvenc.json  av1.json  copy_video.json  dvd_pal.json  mp3.json  preview_10min.json  preview_20min.json  prores_4444.json  telegram.json  vod.json  youtube.json  youtube_4k.json  youtube_HD.json  youtube_HD_nvenc.json
src-tauri/assets/scripts/: Dockerfile  README.md  requirements-torch.txt  requirements.txt  transcript_cli.py  whisper.py
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: uploader.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: args.rs  encoder.rs  mod.rs  utils.rs
src-tauri/src/ffmpeg/: analyze.rs  encoder.rs  filter.rs  mod.rs  probe.rs  transcript.rs  worker.rs
src-tauri/src/publish/: mod.rs
src-tauri/src/publisher/: mod.rs  peertube.rs
src-tauri/src/transcript/: mod.rs  process.rs  transcript.rs
src-tauri/src/utils/: args_parse.rs  errors.rs  logging.rs  mod.rs  presets.rs  template.rs
src/assets/: index.css
src/components/: AlertMsg.vue  ContextMenu.vue  EditConfig.vue  EditPresets.vue  EditPublisher.vue  EditTemplate.vue  GenericModal.vue  HeaderMenu.vue  LogWindow.vue  MediaTable.vue  TimePicker.vue
src/composables/: helper.ts
src/store/: index.ts
src/types/: backend.d.ts  index.d.ts
test/assets/media/: with_audio.json
