[package]
name = "adConverter"
version = "0.1.10"
description = "Batch/Preset converter based on ffmpeg."
authors = ["Jonathan Baecker <jonbae77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "adconverter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
async-walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
derive_more = { version = "1", features = ["display"] }
faccess = "0.2"
flexi_logger = { version = "0.29", features = ["kv", "colors"] }
lazy_static = "1.4"
log = { version = "0.4", features = ["std", "serde", "kv", "kv_std", "kv_sval", "kv_serde"] }
num-traits = "0.2"
path-clean = "1.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8"
shlex = "1"
system_shutdown = "*"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-http = { version = "2", features = ["multipart"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
ts-rs = { version = "10", features = ["chrono-impl", "no-serde-warnings", "serde-json-impl"] }

[profile.release]
opt-level = 3
strip = true
lto = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
semicolon_if_nothing_returned = "warn"
if_not_else = "warn"
redundant_closure_for_method_calls = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
redundant_else = "warn"
